# kaggle_explorer

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: eb_download_kaggle_dataset.ipynb
src/: cli.py  downloader.py
src/utils/: config.py
